// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`acala & bifrostPolkadot > acala transfer DOT to bifrostPolkadot > balance on from chain 1`] = `
{
  "free": 9000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & bifrostPolkadot > acala transfer DOT to bifrostPolkadot > balance on to chain 1`] = `
{
  "free": "(rounded 1000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & bifrostPolkadot > acala transfer DOT to bifrostPolkadot > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v5": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 500000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositReserveAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "dest": {
                "interior": {
                  "x1": [
                    {
                      "parachain": 2030,
                    },
                  ],
                },
                "parents": 1,
              },
              "xcm": [
                {
                  "buyExecution": {
                    "fees": {
                      "fun": {
                        "fungible": 500000000000,
                      },
                      "id": {
                        "interior": {
                          "here": null,
                        },
                        "parents": 1,
                      },
                    },
                    "weightLimit": {
                      "unlimited": null,
                    },
                  },
                },
                {
                  "depositAsset": {
                    "assets": {
                      "wild": {
                        "allCounted": 1,
                      },
                    },
                    "beneficiary": {
                      "interior": {
                        "x1": [
                          {
                            "accountId32": {
                              "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                              "network": null,
                            },
                          },
                        ],
                      },
                      "parents": 0,
                    },
                  },
                },
              ],
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`acala & bifrostPolkadot > acala transfer DOT to bifrostPolkadot > route chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 10000)",
        "refTime": "(rounded 600000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`acala & bifrostPolkadot > acala transfer DOT to bifrostPolkadot > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": "(rounded 200000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`acala & bifrostPolkadot > acala transfer DOT to bifrostPolkadot > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000,
          },
          "id": {
            "interior": "Here",
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2000)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000,
        },
        "id": {
          "interior": "Here",
          "parents": 1,
        },
      },
      "sender": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;

exports[`acala & bifrostPolkadot > bifrostPolkadot transfer DOT to acala > balance on from chain 1`] = `
{
  "free": 999000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & bifrostPolkadot > bifrostPolkadot transfer DOT to acala > balance on to chain 1`] = `
{
  "free": "(rounded 1000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & bifrostPolkadot > bifrostPolkadot transfer DOT to acala > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v5": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 500000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositReserveAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "dest": {
                "interior": {
                  "x1": [
                    {
                      "parachain": 2000,
                    },
                  ],
                },
                "parents": 1,
              },
              "xcm": [
                {
                  "buyExecution": {
                    "fees": {
                      "fun": {
                        "fungible": 500000000000,
                      },
                      "id": {
                        "interior": {
                          "here": null,
                        },
                        "parents": 1,
                      },
                    },
                    "weightLimit": {
                      "unlimited": null,
                    },
                  },
                },
                {
                  "depositAsset": {
                    "assets": {
                      "wild": {
                        "allCounted": 2,
                      },
                    },
                    "beneficiary": {
                      "interior": {
                        "x1": [
                          {
                            "accountId32": {
                              "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                              "network": null,
                            },
                          },
                        ],
                      },
                      "parents": 0,
                    },
                  },
                },
              ],
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`acala & bifrostPolkadot > bifrostPolkadot transfer DOT to acala > route chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": "(rounded 2000)",
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 10000)",
        "refTime": "(rounded 600000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`acala & bifrostPolkadot > bifrostPolkadot transfer DOT to acala > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`acala & bifrostPolkadot > bifrostPolkadot transfer DOT to acala > tx events 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": 0,
            "refTime": "(rounded 500000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;
